<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".detailActivity">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#D1D3DC"
        android:hint="@string/welcome"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/tvMembership"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#E4E5EC"
        android:layout_gravity="center"
        android:hint="@string/membership"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="0dp"/>

    <TextView
        android:id="@+id/Cartype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/car_type"
        android:layout_marginTop="40dp"
        android:textColor="#E9E9ED"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/outside_inside"
        android:textColor="#D7D9E6"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Day_of_rent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#E4E6F3"
        android:hint="@string/day_of_rent"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvDiskon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#DDDEE6"
        android:hint="@string/disc"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvTotalBayar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/total_bayar"
        android:textSize="15sp"
        android:textColor="#DFE1E8"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvThanks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="95dp"
        android:textColor="#DADDEF"
        android:layout_gravity="center"
        android:hint="@string/thanks"
        android:textSize="18sp"
        android:textStyle="bold" />



</LinearLayout>